--- a/Express JS/shopProduct/views/admin/products.ejs
+++ b/Express JS/shopProduct/views/admin/products.ejs
@@ -27,7 +27,9 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a href="/admin/edit-product" class="btn">Edit</a>
+                                    <a href="/admin/edit-product/<%= product.id %>?edit=true" class="btn">Edit</a>
+                                    <a href="/admin/delete-product/<%= product.id %>?delete=true" class="btn">delete</a>
+
                                     <form action="/admin/delete-product" method="POST">
                                         <button class="btn" type="submit">Delete</button>
                                     </form>
